# AnyVPN

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecars/: README.md
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  openvpn.rs  profiles.rs  settings.rs  tray.rs  vpn.rs
src/components/: AppSidebar.tsx  ConnectionToggle.tsx  CustomTitleBar.tsx  LiveClock.tsx  ProfileImportWizard.tsx  SpeedSparkline.tsx  ToastStack.tsx
src/components/home/: CompactConnectButton.tsx  ConnectOrb.tsx  ConnectionInfoPanel.tsx  IpLocationBar.tsx  MetricCard.tsx  RecentConnections.tsx  SmartStatCard.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  switch.tsx
src/lib/: flags.ts  ipLookup.test.ts  ipLookup.ts  tauri.ts  utils.test.ts  utils.ts
src/pages/: HomePage.tsx  LogsPage.tsx  ProfilesPage.tsx  SettingsPage.tsx
